--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,42 +11,45 @@
             android:id="@+id/Temperature_Final"
             android:text="@string/TemperatureFinalString"
             android:textSize="120sp"
+            android:textColor="#000000"
             android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="300dp"
+            android:layout_alignParentTop="true"
     />
 
     <Button
             android:id="@+id/ReadSensorsBtn"
             android:text="@string/ConnectWifiString"
-            android:layout_width="160dp"
+            android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
-            android:layout_below="@id/Temperature_Final"
+            android:shadowRadius="50"
+            android:layout_above="@id/ConnectionStatus"
+            android:background="@drawable/rounded_button"
     />
 
     <Button
             android:id="@+id/ShowLogBtn"
             android:text="@string/DisconnectWifiString"
-            android:layout_width="160dp"
+            android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_marginStart="200dp"
             android:layout_marginTop="10dp"
-            android:layout_below="@id/Temperature_Final"
+            android:layout_above="@id/ConnectionStatus"
+            android:background="@drawable/rounded_button"
     />
 
     <TextView
             android:id="@+id/ConnectionStatus"
             android:text="@string/ConnectionStatusString"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="30dp"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scrollbars = "vertical"
+            android:layout_height="30dp"
             android:fadeScrollbars="false"
-            android:layout_below="@id/ReadSensorsBtn"
+            android:layout_alignParentBottom="true"
     />
-
 
 </RelativeLayout>
